# minilog

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
demos/: CMakeLists.txt
demos/src/: BasicUsageDemo.cpp
src/: CMakeLists.txt
src/minilog/: minilog.hpp
src/minilog/logger/: ConsoleLogger.cpp  ConsoleLogger.hpp  Level.hpp  Logger.hpp  Magic.hpp
